# capstone

./: Anchor.toml  README.md  package.json  pnpm-lock.yaml
.github/workflows/: main.yml
.junie/: guidelines.md
assignments/: README.md
docs/: Architectural_Design.md  Project_Definition.md  README.md  User_Stories_and_On-Chain_Requirements.md
programs/capstone/: Cargo.toml
programs/capstone/src/: constants.rs  error.rs  lib.rs  test_helpers.rs  tests.rs
programs/capstone/src/handlers/: attest.rs  complete.rs  initialize.rs  mod.rs
programs/capstone/src/state/: meditation_attestation.rs  meditation_plan.rs  mod.rs
programs/capstone/src/tests/: attest.rs  complete.rs  initialize.rs  mod.rs
runbooks/deployment/: main.tx
tests/: capstone.test.js  helpers.ts  initialize.test.ts  usdcAccount.json
